# luaposix

./: .autom4te.cfg  .gitignore  .luacov  .prev-version  .slackid  .travis.yml  .x-update-copyright  AUTHORS  COPYING  ChangeLog  ChangeLog.old  GNUmakefile  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  aclocal.m4  bootstrap  bootstrap.conf  bootstrap.slingshot  config.h  config.h.in  config.ld  configure  configure.ac  curses.html  curses.lua  curses_c.html  dummy.c  index.html  lcurses.c  lcurses_c.html  libtool  local.mk  lposix.c  lua52compat.h  (+46 more)
.github/workflows/: spec.yml
build-aux/: .gitignore  config.guess  config.ld.in  config.sub  install-sh  luke  make_lcurses_doc.pl  mkrockspecs  release.mk  rockspecs.mk  sanity-cfg.mk  sanity.mk  specl.mk
classes/: posix.curses.chstr.html  posix.curses.window.html
doc/: curses.html  index.html
doc/classes/: posix.curses.chstr.html  posix.curses.window.html
doc/examples/: abstract-ns-client.lua  abstract-ns-client.lua.html  abstract-ns-server.lua  abstract-ns-server.lua.html  curses.lua.html  dir.lua  dir.lua.html  dup2.lua  dup2.lua.html  fork.lua  fork.lua.html  fork2.lua  fork2.lua.html  getopt.lua  getopt.lua.html  glob.lua  glob.lua.html  limit.lua  limit.lua.html  lock.lua  lock.lua.html  netlink-uevent.lua  netlink-uevent.lua.html  packet-socket.lua  packet-socket.lua.html  ping.lua  ping.lua.html  poll.lua  poll.lua.html  rt_sched.lua  rt_sched.lua.html  signal.lua  signal.lua.html  socket.lua  socket.lua.html  termios.lua  termios.lua.html  tree.lua  tree.lua.html
doc/modules/: posix.bit32.html  posix.ctype.html  posix.curses.html  posix.dirent.html  posix.errno.html  posix.fcntl.html  posix.fnmatch.html  posix.getopt.html  posix.glob.html  posix.grp.html  posix.html  posix.libgen.html  posix.poll.html  posix.pwd.html  posix.sched.html  posix.signal.html  posix.stdio.html  posix.stdlib.html  posix.sys.msg.html  posix.sys.resource.html  posix.sys.socket.html  posix.sys.stat.html  posix.sys.statvfs.html  posix.sys.time.html  posix.sys.times.html  posix.sys.utsname.html  posix.sys.wait.html  posix.syslog.html  posix.termio.html  posix.time.html  posix.unistd.html  posix.utime.html
docs/: index.html
docs/examples/: dir.lua.html  fork.lua.html  fork2.lua.html  getopt.lua.html  glob.lua.html  limit.lua.html  lock.lua.html  poll.lua.html  signal.lua.html  socket.lua.html  termios.lua.html  tree.lua.html
docs/modules/: posix.sys.html
examples/: abstract-ns-client.lua.html  abstract-ns-server.lua  abstract-ns-server.lua.html  curses.lua  curses.lua.html  dir.lua  dir.lua.html  dup2.lua  dup2.lua.html  fork.lua.html  fork2.lua  fork2.lua.html  getopt.lua  getopt.lua.html  glob.lua  glob.lua.html  limit.lua.html  lock.lua  lock.lua.html  mq_client.lua  mq_server.lua  netlink-uevent.lua  netlink-uevent.lua.html  packet-socket.lua.html  ping.lua  ping.lua.html  poll.lua  poll.lua.html  rt_sched.lua  rt_sched.lua.html  signal.lua  signal.lua.html  socket.lua  socket.lua.html  termios.lua  termios.lua.html  tree.lua  tree.lua.html
ext/include/: _helpers.c  compat-5.2.c  compat-5.2.h  lua52compat.h  strlcpy.c
ext/posix/: _helpers.c  _helpers.h  bit32.c  config.ld  ctype.c  curses.c  dirent.c  errno.c  fcntl.c  fnmatch.c  getopt.c  glob.c  grp.c  libgen.c  poll.c  posix.c  pwd.c  sched.c  signal.c  stdio.c  stdlib.c  syslog.c  termio.c  time.c  unistd.c  utime.c
ext/posix/curses/: chstr.c  window.c
ext/posix/sys/: msg.c  resource.c  (+7 more)
lib/: .gitignore  curses.lua  posix.lua  posix.lua.in
lib/posix/: _argcheck.lua  _base.lua  _bitwise.lua  _strict.lua  compat.lua  config.lua  deprecated.lua  init.lua  sys.lua  util.lua  version.lua  version.lua.in  with-debug.lua
luaposix-5.1.24/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  lposix.c  luarocks-config.lua.in  posix.lua
luaposix-5.1.24/docs/: index.html
luaposix-5.1.24/m4/: gnulib-comp.m4
m4/: .gitignore  ax_lua.m4  ax_with_curses.m4  gnulib-comp.m4  slingshot.m4
modules/: lyaml.explicit.html  lyaml.functional.html  lyaml.html  lyaml.implicit.html  posix.bit32.html  posix.ctype.html  posix.curses.html  posix.dirent.html  posix.errno.html  posix.fcntl.html  posix.fnmatch.html  posix.getopt.html  posix.glob.html  posix.grp.html  posix.html  posix.libgen.html  posix.poll.html  posix.pwd.html  posix.sched.html  posix.signal.html  posix.stdio.html  posix.stdlib.html  posix.sys.msg.html  posix.sys.resource.html  posix.sys.socket.html  posix.sys.stat.html  posix.sys.statvfs.html  posix.sys.time.html  posix.sys.times.html  posix.sys.utsname.html  posix.sys.wait.html  posix.syslog.html  posix.termio.html  posix.time.html  posix.unistd.html  posix.utime.html
spec/: lposix_spec.yaml  posix_compat_spec.yaml  posix_ctype_spec.yaml  posix_deprecated_spec.yaml  posix_dirent_spec.yaml  posix_fcntl_spec.yaml  posix_fnmatch_spec.yaml  posix_glob_spec.yaml  posix_grp_spec.yaml  posix_pwd_spec.yaml  posix_signal_spec.yaml  posix_spec.yaml  posix_stdio_spec.yaml  posix_stdlib_spec.yaml  posix_sys_msg_spec.yaml  posix_sys_resource_spec.yaml  posix_sys_socket_spec.yaml  posix_sys_stat_spec.yaml  posix_sys_statvfs_spec.yaml  posix_sys_time_spec.yaml  posix_sys_times_spec.yaml  posix_sys_utsname_spec.yaml  posix_syslog_spec.yaml  posix_time_spec.yaml  posix_unistd_spec.yaml  posix_version_spec.yaml  spec_helper.lua
specs/: curses_spec.yaml  lposix_spec.yaml  posix_bit32_spec.yaml  posix_compat.yaml  posix_compat_spec.yaml  posix_ctype_spec.yaml  posix_deprecated_spec.yaml  posix_dirent_spec.yaml  posix_fcntl_spec.yaml  posix_fnmatch_spec.yaml  posix_glob_spec.yaml  posix_grp_spec.yaml  posix_pwd_spec.yaml  posix_signal_spec.yaml  posix_spec.yaml  posix_stdio_spec.yaml  posix_stdlib_spec.yaml  posix_sys_msg_spec.yaml  posix_sys_resource_spec.yaml  posix_sys_socket_spec.yaml  posix_sys_stat_spec.yaml  posix_sys_statvfs_spec.yaml  posix_sys_time_spec.yaml  posix_sys_times_spec.yaml  posix_sys_utsname_spec.yaml  posix_syslog_spec.yaml  posix_time_spec.yaml  posix_unistd_spec.yaml  posix_version_spec.yaml  spec_helper.lua  specs.mk
